[CXF-7949] Upgrade to Jakarta Servlet API 4.0.3

--- a/distribution/src/main/release/samples/oauth/client/pom.xml
+++ b/distribution/src/main/release/samples/oauth/client/pom.xml
@@ -84,8 +84,8 @@
             <version>20100527</version>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
         </dependency>
         <dependency>
             <artifactId>standard</artifactId>
