[CXF-7949] Remove cxf.servlet-api-2.5.* properties

--- a/rt/transports/http-netty/netty-server/pom.xml
+++ b/rt/transports/http-netty/netty-server/pom.xml
@@ -65,6 +65,7 @@
             <!-- we don't implement the servlet 3.0 specification here -->
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-servlet_2.5_spec</artifactId>
+            <version>1.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.aries.blueprint</groupId>
