--- a/systests/rs-sse/rs-sse-undertow/pom.xml
+++ b/systests/rs-sse/rs-sse-undertow/pom.xml
@@ -51,5 +51,10 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-transports-http-jetty</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
