--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -135,6 +135,7 @@
         <cxf.jackson.databind.version>2.10.2</cxf.jackson.databind.version>
         <cxf.jacorb.version>3.9</cxf.jacorb.version>
         <cxf.jaeger.version>1.0.0</cxf.jaeger.version>
+        <cxf.jakarta.activation.version>1.2.1</cxf.jakarta.activation.version>
         <cxf.james.mim4j.version>0.7.2</cxf.james.mim4j.version>
         <cxf.javassist.version>3.25.0-GA</cxf.javassist.version>
         <cxf.javax.annotation-api.version>1.3.5</cxf.javax.annotation-api.version>
@@ -185,6 +186,7 @@
         <cxf.rhino.version>1.7R2</cxf.rhino.version>
         <cxf.rxjava.version>1.3.8</cxf.rxjava.version>
         <cxf.rxjava2.version>2.2.11</cxf.rxjava2.version>
+        <cxf.saaj-impl.version>1.5.1</cxf.saaj-impl.version>
         <cxf.servlet-api-2.5.artifact>geronimo-servlet_2.5_spec</cxf.servlet-api-2.5.artifact>
         <cxf.servlet-api-2.5.version>1.2</cxf.servlet-api-2.5.version>
         <cxf.servlet-api.artifact>javax.servlet-api</cxf.servlet-api.artifact>
@@ -199,7 +201,7 @@
         <cxf.spring.osgi.version>1.2.1</cxf.spring.osgi.version>
         <cxf.spring.security.version>5.2.1.RELEASE</cxf.spring.security.version>
         <cxf.spring.version>5.2.3.RELEASE</cxf.spring.version>
-        <cxf.stax-ex.version>1.7.6</cxf.stax-ex.version>
+        <cxf.stax-ex.version>1.8.1</cxf.stax-ex.version>
         <cxf.swagger.ui.version>3.24.3</cxf.swagger.ui.version>
         <cxf.swagger.v3.version>2.1.1</cxf.swagger.v3.version>
         <cxf.swagger2.version>1.6.0</cxf.swagger2.version>
@@ -251,7 +253,7 @@
         <cxf.pax.exam.version>4.13.1</cxf.pax.exam.version>
         <cxf.reflections.bundle.version>0.9.11_2</cxf.reflections.bundle.version>
         <cxf.rhino.bundle.version>1.7R2_3</cxf.rhino.bundle.version>
-        <cxf.saaj-impl.bundle.version>1.3.23_2</cxf.saaj-impl.bundle.version>
+        <cxf.saaj-impl.bundle.version>1.5.1_1</cxf.saaj-impl.bundle.version>
         <cxf.servicemix.aspectj.version>1.9.1_1</cxf.servicemix.aspectj.version>
         <cxf.servicemix.cglib.version>3.3.0_1</cxf.servicemix.cglib.version>
         <cxf.servicemix.javax.el.version>3.0.0_1</cxf.servicemix.javax.el.version>
@@ -2862,7 +2864,7 @@
                 <dependency>
                     <groupId>com.sun.activation</groupId>
                     <artifactId>jakarta.activation</artifactId>
-                    <version>1.2.1</version>
+                    <version>${cxf.jakarta.activation.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>jakarta.jws</groupId>
@@ -2877,7 +2879,7 @@
                 <dependency>
                     <groupId>com.sun.xml.messaging.saaj</groupId>
                     <artifactId>saaj-impl</artifactId>
-                    <version>1.5.1</version>
+                    <version>${cxf.saaj-impl.version}</version>
                     <scope>runtime</scope>
                 </dependency>
                 <dependency>
